[gd_scene load_steps=15 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://tile.tres" type="TileSet" id=2]
[ext_resource path="res://snake2.tscn" type="PackedScene" id=3]
[ext_resource path="res://RichTextLabel2.gd" type="Script" id=5]
[ext_resource path="res://Orbitron-VariableFont_wght.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://bot.tscn" type="PackedScene" id=7]
[ext_resource path="res://jumptext.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.3151, 0.109589 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 29.6658 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.16858, 50.7014 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 8
font_data = ExtResource( 6 )

[node name="lvl1" type="Node2D"]

[node name="Snake2" parent="." instance=ExtResource( 3 )]
position = Vector2( 296.537, -22.718 )

[node name="falllzone" type="Area2D" parent="."]
position = Vector2( 111.605, 51.4921 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="falllzone"]
shape = SubResource( 1 )

[node name="Snake3" parent="." instance=ExtResource( 3 )]
position = Vector2( 422.655, -26.933 )

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = -252.648
margin_top = -65.1101
margin_right = -76.6483
margin_bottom = -32.1101
rect_pivot_offset = Vector2( -478.112, 164.406 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="RichTextLabel2"]
wait_time = 0.1
autostart = true

[node name="jumptext" type="RichTextLabel" parent="."]
margin_left = -63.8168
margin_top = -74.7726
margin_right = 95.1832
margin_bottom = -45.7726
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
visible_characters = 50
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="jumptextTimer" type="Timer" parent="jumptext"]
wait_time = 0.1

[node name="jumptextarea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="jumptextarea"]
position = Vector2( -163.835, -18.1799 )
shape = SubResource( 3 )

[node name="nextlvl" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="nextlvl"]
position = Vector2( 989.965, -55.9725 )
shape = SubResource( 4 )

[node name="bot" parent="." instance=ExtResource( 7 )]
position = Vector2( 856.515, 22.797 )

[node name="disparar_text" type="RichTextLabel" parent="."]
margin_left = 151.204
margin_top = -42.3412
margin_right = 263.204
margin_bottom = -25.3412
custom_fonts/normal_font = SubResource( 5 )
text = "Tab para disparar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inimigo_text" type="RichTextLabel" parent="."]
margin_left = 398.816
margin_top = -55.6326
margin_right = 591.816
margin_bottom = -39.6326
custom_fonts/normal_font = SubResource( 6 )
text = "Inimigo atiram caso esteja รก frente deles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="proximolvl_text" type="RichTextLabel" parent="."]
margin_left = 928.562
margin_top = -76.2142
margin_right = 992.562
margin_bottom = -58.2142
rect_pivot_offset = Vector2( 302.173, 78.4891 )
custom_fonts/normal_font = SubResource( 7 )
text = "Proximo nivel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -786439, 4, 0, -786438, 4, 0, -786437, 4, 0, -786436, 4, 0, -786435, 4, 0, -786434, 4, 0, -786433, 4, 0, -851968, 4, 0, -851967, 4, 0, -851966, 4, 0, -851965, 4, 0, -851964, 4, 0, -851963, 4, 0, -851962, 4, 0, -851961, 4, 0, -851960, 4, 0, -851959, 4, 0, -851958, 4, 0, -851957, 4, 0, -851956, 4, 0, -851955, 4, 0, -851954, 4, 0, -851953, 4, 0, -851952, 4, 0, -851951, 4, 0, -720903, 4, 0, -720902, 4, 0, -720901, 4, 0, -720900, 4, 0, -720899, 4, 0, -720898, 4, 0, -720897, 4, 0, -786432, 4, 0, -786431, 4, 0, -786430, 4, 0, -786429, 4, 0, -786428, 4, 0, -786427, 4, 0, -786426, 4, 0, -786425, 4, 0, -786424, 4, 0, -786423, 4, 0, -786422, 4, 0, -786421, 4, 0, -786420, 4, 0, -786419, 4, 0, -786418, 4, 0, -786417, 4, 0, -786416, 4, 0, -786415, 4, 0, -655394, 4, 0, -655393, 4, 0, -655392, 4, 0, -655391, 4, 0, -655390, 4, 0, -655389, 4, 0, -655388, 4, 0, -655387, 4, 0, -655386, 4, 0, -655385, 4, 0, -655384, 4, 0, -655383, 4, 0, -655382, 4, 0, -655381, 4, 0, -655380, 4, 0, -655379, 4, 0, -655378, 4, 0, -655377, 4, 0, -655376, 4, 0, -655375, 4, 0, -655374, 4, 0, -655373, 4, 0, -655372, 4, 0, -655371, 4, 0, -655370, 4, 0, -655369, 4, 0, -655368, 4, 0, -655367, 4, 0, -655366, 4, 0, -655365, 4, 0, -655364, 4, 0, -655363, 4, 0, -655362, 4, 0, -655361, 4, 0, -720896, 4, 0, -720895, 4, 0, -720894, 4, 0, -720893, 4, 0, -720892, 4, 0, -720891, 4, 0, -720890, 4, 0, -720889, 4, 0, -720888, 4, 0, -720887, 4, 0, -720886, 4, 0, -720885, 4, 0, -720884, 4, 0, -720883, 4, 0, -720882, 4, 0, -720881, 4, 0, -720880, 4, 0, -720879, 4, 0, -720878, 4, 0, -720877, 4, 0, -720876, 4, 0, -720875, 4, 0, -720874, 4, 0, -720873, 4, 0, -720872, 4, 0, -720871, 4, 0, -720870, 4, 0, -720869, 4, 0, -720868, 4, 0, -720867, 4, 0, -720866, 4, 0, -720865, 4, 0, -720864, 4, 0, -720863, 4, 0, -720862, 4, 0, -720861, 4, 0, -720860, 4, 0, -720859, 4, 0, -720858, 4, 0, -720857, 4, 0, -720856, 4, 0, -720855, 4, 0, -720854, 4, 0, -720853, 4, 0, -720852, 4, 0, -720851, 4, 0, -720850, 4, 0, -720849, 4, 0, -720848, 4, 0, -720847, 4, 0, -720846, 4, 0, -720845, 4, 0, -720844, 4, 0, -720843, 4, 0, -720842, 4, 0, -720841, 4, 0, -720840, 4, 0, -720839, 4, 0, -720838, 4, 0, -720837, 4, 0, -720836, 4, 0, -720835, 4, 0, -720834, 4, 0, -720833, 4, 0, -720832, 4, 0, -720831, 4, 0, -720830, 4, 0, -720829, 4, 0, -589858, 4, 0, -589857, 4, 0, -589856, 4, 0, -589855, 4, 0, -589854, 4, 0, -589853, 4, 0, -589852, 4, 0, -589851, 4, 0, -589850, 4, 0, -589849, 4, 0, -589848, 4, 0, -589847, 4, 0, -589846, 4, 0, -589845, 4, 0, -589844, 4, 0, -589843, 4, 0, -589842, 4, 0, -589841, 4, 0, -589840, 4, 0, -589839, 4, 0, -589838, 4, 0, -589837, 4, 0, -589836, 4, 0, -589835, 4, 0, -589834, 4, 0, -589833, 4, 0, -589832, 4, 0, -589831, 4, 0, -589830, 4, 0, -589829, 4, 0, -589828, 4, 0, -589827, 4, 0, -589826, 4, 0, -589825, 4, 0, -655360, 4, 0, -655359, 4, 0, -655358, 4, 0, -655357, 4, 0, -655356, 4, 0, -655355, 4, 0, -655354, 4, 0, -655353, 4, 0, -655352, 4, 0, -655351, 4, 0, -655350, 4, 0, -655349, 4, 0, -655348, 4, 0, -655347, 4, 0, -655346, 4, 0, -655345, 4, 0, -655344, 4, 0, -655343, 4, 0, -655342, 4, 0, -655341, 4, 0, -655340, 4, 0, -655339, 4, 0, -655338, 4, 0, -655337, 4, 0, -655336, 4, 0, -655335, 4, 0, -655334, 4, 0, -655333, 4, 0, -655332, 4, 0, -655331, 4, 0, -655330, 4, 0, -655329, 4, 0, -655328, 4, 0, -655327, 4, 0, -655326, 4, 0, -655325, 4, 0, -655324, 4, 0, -655323, 4, 0, -655322, 4, 0, -655321, 4, 0, -655320, 4, 0, -655319, 4, 0, -655318, 4, 0, -655317, 4, 0, -655316, 4, 0, -655315, 4, 0, -655314, 4, 0, -655313, 4, 0, -655312, 4, 0, -655311, 4, 0, -655310, 4, 0, -655309, 4, 0, -655308, 4, 0, -655307, 4, 0, -655306, 4, 0, -655305, 4, 0, -655304, 4, 0, -655303, 4, 0, -655302, 4, 0, -655301, 4, 0, -655300, 4, 0, -655299, 4, 0, -655298, 4, 0, -655297, 4, 0, -655296, 4, 0, -655295, 4, 0, -655294, 4, 0, -655293, 4, 0, -524322, 4, 0, -524321, 4, 0, -524320, 4, 0, -524319, 4, 0, -524318, 4, 0, -524317, 4, 0, -524316, 4, 0, -524315, 4, 0, -524314, 4, 0, -524313, 4, 0, -524312, 4, 0, -524311, 7, 0, -524310, 7, 0, -524309, 7, 0, -524308, 7, 0, -524307, 7, 0, -524306, 7, 0, -524305, 7, 0, -524304, 7, 0, -524303, 7, 0, -524302, 7, 0, -524301, 7, 0, -524300, 7, 0, -524299, 7, 0, -524298, 7, 0, -524297, 7, 0, -524296, 7, 0, -524295, 7, 0, -524294, 7, 0, -524293, 7, 0, -524292, 7, 0, -524291, 7, 0, -524290, 7, 0, -524289, 7, 0, -589824, 7, 0, -589823, 7, 0, -589822, 7, 0, -589821, 7, 0, -589820, 7, 0, -589819, 7, 0, -589818, 7, 0, -589817, 7, 0, -589816, 7, 0, -589815, 7, 0, -589814, 7, 0, -589813, 7, 0, -589812, 7, 0, -589811, 7, 0, -589810, 7, 0, -589809, 7, 0, -589808, 7, 0, -589807, 7, 0, -589806, 7, 0, -589805, 7, 0, -589804, 7, 0, -589803, 7, 0, -589802, 7, 0, -589801, 7, 0, -589800, 7, 0, -589799, 7, 0, -589798, 7, 0, -589797, 7, 0, -589796, 7, 0, -589795, 7, 0, -589794, 7, 0, -589793, 7, 0, -589792, 7, 0, -589791, 7, 0, -589790, 7, 0, -589789, 7, 0, -589788, 7, 0, -589787, 7, 0, -589786, 7, 0, -589785, 7, 0, -589784, 7, 0, -589783, 7, 0, -589782, 7, 0, -589781, 7, 0, -589780, 7, 0, -589779, 7, 0, -589778, 7, 0, -589777, 7, 0, -589776, 7, 0, -589775, 7, 0, -589774, 7, 0, -589773, 7, 0, -589772, 7, 0, -589771, 7, 0, -589770, 7, 0, -589769, 7, 0, -589768, 7, 0, -589767, 7, 0, -589766, 7, 0, -589765, 7, 0, -589764, 7, 0, -589763, 7, 0, -589762, 7, 0, -589761, 7, 0, -589760, 7, 0, -589759, 4, 0, -589758, 4, 0, -589757, 4, 0, -458786, 4, 0, -458785, 4, 0, -458784, 4, 0, -458783, 4, 0, -458782, 4, 0, -458781, 4, 0, -458780, 4, 0, -458779, 4, 0, -458778, 4, 0, -458777, 4, 0, -458776, 5, 0, -524223, 3, 0, -524222, 4, 0, -524221, 4, 0, -393250, 4, 0, -393249, 4, 0, -393248, 4, 0, -393247, 4, 0, -393246, 4, 0, -393245, 4, 0, -393244, 4, 0, -393243, 4, 0, -393242, 4, 0, -393241, 4, 0, -393240, 5, 0, -458687, 3, 0, -458686, 4, 0, -458685, 4, 0, -327714, 4, 0, -327713, 4, 0, -327712, 4, 0, -327711, 4, 0, -327710, 4, 0, -327709, 4, 0, -327708, 4, 0, -327707, 4, 0, -327706, 4, 0, -327705, 4, 0, -327704, 5, 0, -393151, 3, 0, -393150, 4, 0, -393149, 4, 0, -262178, 4, 0, -262177, 4, 0, -262176, 4, 0, -262175, 4, 0, -262174, 4, 0, -262173, 4, 0, -262172, 4, 0, -262171, 4, 0, -262170, 4, 0, -262169, 4, 0, -262168, 5, 0, -327615, 3, 0, -327614, 4, 0, -327613, 4, 0, -196642, 4, 0, -196641, 4, 0, -196640, 4, 0, -196639, 4, 0, -196638, 4, 0, -196637, 4, 0, -196636, 4, 0, -196635, 4, 0, -196634, 4, 0, -196633, 4, 0, -196632, 5, 0, -262079, 3, 0, -262078, 4, 0, -262077, 4, 0, -131106, 4, 0, -131105, 4, 0, -131104, 4, 0, -131103, 4, 0, -131102, 4, 0, -131101, 4, 0, -131100, 4, 0, -131099, 4, 0, -131098, 4, 0, -131097, 4, 0, -131096, 5, 0, -196543, 3, 0, -196542, 4, 0, -196541, 4, 0, -65570, 4, 0, -65569, 4, 0, -65568, 4, 0, -65567, 4, 0, -65566, 4, 0, -65565, 4, 0, -65564, 4, 0, -65563, 4, 0, -65562, 4, 0, -65561, 4, 0, -65560, 5, 0, -131072, 0, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 2, 0, -131007, 3, 0, -131006, 4, 0, -131005, 4, 0, -34, 4, 0, -33, 4, 0, -32, 4, 0, -31, 4, 0, -30, 4, 0, -29, 4, 0, -28, 4, 0, -27, 4, 0, -26, 4, 0, -25, 4, 0, -24, 5, 0, -65536, 3, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 5, 0, -65471, 3, 0, -65470, 4, 0, -65469, 4, 0, 65502, 4, 0, 65503, 4, 0, 65504, 4, 0, 65505, 4, 0, 65506, 4, 0, 65507, 4, 0, 65508, 4, 0, 65509, 4, 0, 65510, 4, 0, 65511, 4, 0, 65512, 4, 0, 65513, 1, 0, 65514, 1, 0, 65515, 1, 0, 65516, 1, 0, 65517, 1, 0, 65518, 1, 0, 65519, 1, 0, 65520, 1, 0, 65521, 1, 0, 65522, 1, 0, 65523, 1, 0, 65524, 1, 0, 65525, 1, 0, 65526, 1, 0, 65527, 1, 0, 65528, 1, 0, 65529, 1, 0, 65530, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 5, 0, 9, 0, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 35, 2, 0, 57, 0, 0, 58, 1, 0, 59, 1, 0, 60, 1, 0, 61, 1, 0, 62, 1, 0, 63, 1, 0, 64, 1, 0, 65, 4, 0, 66, 4, 0, 67, 4, 0, 131038, 4, 0, 131039, 4, 0, 131040, 4, 0, 131041, 4, 0, 131042, 4, 0, 131043, 4, 0, 131044, 4, 0, 131045, 4, 0, 131046, 4, 0, 131047, 4, 0, 131048, 4, 0, 131049, 4, 0, 131050, 4, 0, 131051, 4, 0, 131052, 4, 0, 131053, 4, 0, 131054, 4, 0, 131055, 4, 0, 131056, 4, 0, 131057, 4, 0, 131058, 4, 0, 131059, 4, 0, 131060, 4, 0, 131061, 4, 0, 131062, 4, 0, 131063, 4, 0, 131064, 4, 0, 131065, 4, 0, 131066, 4, 0, 131067, 4, 0, 131068, 4, 0, 131069, 4, 0, 131070, 4, 0, 131071, 4, 0, 65536, 4, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 5, 0, 65545, 3, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 65556, 4, 0, 65557, 4, 0, 65558, 4, 0, 65559, 4, 0, 65560, 4, 0, 65561, 4, 0, 65562, 4, 0, 65563, 4, 0, 65564, 4, 0, 65565, 4, 0, 65566, 4, 0, 65567, 4, 0, 65568, 4, 0, 65569, 4, 0, 65570, 4, 0, 65571, 5, 0, 65593, 3, 0, 65594, 4, 0, 65595, 4, 0, 65596, 4, 0, 65597, 4, 0, 65598, 4, 0, 65599, 4, 0, 65600, 4, 0, 65601, 4, 0, 65602, 4, 0, 65603, 4, 0, 196574, 4, 0, 196575, 4, 0, 196576, 4, 0, 196577, 4, 0, 196578, 4, 0, 196579, 4, 0, 196580, 4, 0, 196581, 4, 0, 196582, 4, 0, 196583, 4, 0, 196584, 4, 0, 196585, 4, 0, 196586, 4, 0, 196587, 4, 0, 196588, 4, 0, 196589, 4, 0, 196590, 4, 0, 196591, 4, 0, 196592, 4, 0, 196593, 4, 0, 196594, 4, 0, 196595, 4, 0, 196596, 4, 0, 196597, 4, 0, 196598, 4, 0, 196599, 4, 0, 196600, 4, 0, 196601, 4, 0, 196602, 4, 0, 196603, 4, 0, 196604, 4, 0, 196605, 4, 0, 196606, 4, 0, 196607, 4, 0, 131072, 4, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 5, 0, 131081, 3, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131090, 4, 0, 131091, 4, 0, 131092, 4, 0, 131093, 4, 0, 131094, 4, 0, 131095, 4, 0, 131096, 4, 0, 131097, 4, 0, 131098, 4, 0, 131099, 4, 0, 131100, 4, 0, 131101, 4, 0, 131102, 4, 0, 131103, 4, 0, 131104, 4, 0, 131105, 4, 0, 131106, 4, 0, 131107, 5, 0, 131112, 0, 0, 131113, 1, 0, 131114, 1, 0, 131115, 1, 0, 131116, 1, 0, 131117, 1, 0, 131118, 1, 0, 131119, 1, 0, 131120, 1, 0, 131121, 1, 0, 131122, 1, 0, 131123, 1, 0, 131124, 1, 0, 131125, 1, 0, 131126, 1, 0, 131127, 1, 0, 131128, 1, 0, 131129, 4, 0, 131130, 4, 0, 131131, 4, 0, 131132, 4, 0, 131133, 4, 0, 131134, 4, 0, 131135, 4, 0, 131136, 4, 0, 131137, 4, 0, 131138, 4, 0, 131139, 4, 0, 262110, 4, 0, 262111, 4, 0, 262112, 4, 0, 262113, 4, 0, 262114, 4, 0, 262115, 4, 0, 262116, 4, 0, 262117, 4, 0, 262118, 4, 0, 262119, 4, 0, 262120, 4, 0, 262121, 4, 0, 262122, 4, 0, 262123, 4, 0, 262124, 4, 0, 262125, 4, 0, 262126, 4, 0, 262127, 4, 0, 262128, 4, 0, 262129, 4, 0, 262130, 4, 0, 262131, 4, 0, 262132, 4, 0, 262133, 4, 0, 262134, 4, 0, 262135, 4, 0, 262136, 4, 0, 262137, 4, 0, 262138, 4, 0, 262139, 4, 0, 262140, 4, 0, 262141, 4, 0, 262142, 4, 0, 262143, 4, 0, 196608, 4, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 5, 0, 196613, 9, 0, 196614, 9, 0, 196615, 9, 0, 196616, 9, 0, 196617, 3, 0, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 0, 196625, 4, 0, 196626, 4, 0, 196627, 4, 0, 196628, 4, 0, 196629, 4, 0, 196630, 4, 0, 196631, 4, 0, 196632, 4, 0, 196633, 4, 0, 196634, 4, 0, 196635, 4, 0, 196636, 4, 0, 196637, 4, 0, 196638, 4, 0, 196639, 4, 0, 196640, 4, 0, 196641, 4, 0, 196642, 4, 0, 196643, 4, 0, 196644, 1, 0, 196645, 1, 0, 196646, 1, 0, 196647, 1, 0, 196648, 4, 0, 196649, 4, 0, 196650, 4, 0, 196651, 4, 0, 196652, 4, 0, 196653, 4, 0, 196654, 4, 0, 196655, 4, 0, 196656, 4, 0, 196657, 4, 0, 196658, 4, 0, 196659, 4, 0, 196660, 4, 0, 196661, 4, 0, 196662, 4, 0, 196663, 4, 0, 196664, 4, 0, 196665, 4, 0, 196666, 4, 0, 196667, 4, 0, 196668, 4, 0, 196669, 4, 0, 196670, 4, 0, 196671, 4, 0, 196672, 4, 0, 196673, 4, 0, 196674, 4, 0, 196675, 4, 0, 327646, 4, 0, 327647, 4, 0, 327648, 4, 0, 327649, 4, 0, 327650, 4, 0, 327651, 4, 0, 327652, 4, 0, 327653, 4, 0, 327654, 4, 0, 327655, 4, 0, 327656, 4, 0, 327657, 4, 0, 327658, 4, 0, 327659, 4, 0, 327660, 4, 0, 327661, 4, 0, 327662, 4, 0, 327663, 4, 0, 327664, 4, 0, 327665, 4, 0, 327666, 4, 0, 327667, 4, 0, 327668, 4, 0, 327669, 4, 0, 327670, 4, 0, 327671, 4, 0, 327672, 4, 0, 327673, 4, 0, 327674, 4, 0, 327675, 4, 0, 327676, 4, 0, 327677, 4, 0, 327678, 4, 0, 327679, 4, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 4, 0, 262166, 4, 0, 262167, 4, 0, 262168, 4, 0, 262169, 4, 0, 262170, 4, 0, 262171, 4, 0, 262172, 4, 0, 262173, 4, 0, 262174, 4, 0, 262175, 4, 0, 262176, 4, 0, 262177, 4, 0, 262178, 4, 0, 262179, 4, 0, 262180, 4, 0, 262181, 4, 0, 262182, 4, 0, 262183, 4, 0, 262184, 4, 0, 262185, 4, 0, 262186, 4, 0, 262187, 4, 0, 262188, 4, 0, 262189, 4, 0, 262190, 4, 0, 262191, 4, 0, 262192, 4, 0, 262193, 4, 0, 262194, 4, 0, 262195, 4, 0, 262196, 4, 0, 262197, 4, 0, 262198, 4, 0, 262199, 4, 0, 262200, 4, 0, 262201, 4, 0, 262202, 4, 0, 262203, 4, 0, 262204, 4, 0, 262205, 4, 0, 262206, 4, 0, 262207, 4, 0, 262208, 4, 0, 262209, 4, 0, 262210, 4, 0, 262211, 4, 0, 393182, 4, 0, 393183, 4, 0, 393184, 4, 0, 393185, 4, 0, 393186, 4, 0, 393187, 4, 0, 393188, 4, 0, 393189, 4, 0, 393190, 4, 0, 393191, 4, 0, 393192, 4, 0, 393193, 4, 0, 393194, 4, 0, 393195, 4, 0, 393196, 4, 0, 393197, 4, 0, 393198, 4, 0, 393199, 4, 0, 393200, 4, 0, 393201, 4, 0, 393202, 4, 0, 393203, 4, 0, 393204, 4, 0, 393205, 4, 0, 393206, 4, 0, 393207, 4, 0, 393208, 4, 0, 393209, 4, 0, 393210, 4, 0, 393211, 4, 0, 393212, 4, 0, 393213, 4, 0, 393214, 4, 0, 393215, 4, 0, 327680, 4, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 4, 0, 327692, 4, 0, 327693, 4, 0, 327694, 4, 0, 327695, 4, 0, 327696, 4, 0, 327697, 4, 0, 327698, 4, 0, 327699, 4, 0, 327700, 4, 0, 327701, 4, 0, 327702, 4, 0, 327703, 4, 0, 327704, 4, 0, 327705, 4, 0, 327706, 4, 0, 327707, 4, 0, 327708, 4, 0, 327709, 4, 0, 327710, 4, 0, 327711, 4, 0, 327712, 4, 0, 327713, 4, 0, 327714, 4, 0, 327715, 4, 0, 327716, 4, 0, 327717, 4, 0, 327718, 4, 0, 327719, 4, 0, 327720, 4, 0, 327721, 4, 0, 327722, 4, 0, 327723, 4, 0, 327724, 4, 0, 327725, 4, 0, 327726, 4, 0, 327727, 4, 0, 327728, 4, 0, 327729, 4, 0, 327730, 4, 0, 327731, 4, 0, 327732, 4, 0, 327733, 4, 0, 327734, 4, 0, 327735, 4, 0, 327736, 4, 0, 327737, 4, 0, 327738, 4, 0, 327739, 4, 0, 327740, 4, 0, 327741, 4, 0, 327742, 4, 0, 327743, 4, 0, 327744, 4, 0, 327745, 4, 0, 327746, 4, 0, 327747, 4, 0, 458748, 4, 0, 458749, 4, 0, 458750, 4, 0, 458751, 4, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 4, 0, 393231, 4, 0, 393232, 4, 0, 393233, 4, 0, 393234, 4, 0, 393235, 4, 0, 393236, 4, 0, 393237, 4, 0, 393238, 4, 0, 393239, 4, 0, 393240, 4, 0, 393241, 4, 0, 393242, 4, 0, 393243, 4, 0, 393244, 4, 0, 393245, 4, 0, 393246, 4, 0, 393247, 4, 0, 393248, 4, 0, 393249, 4, 0, 393250, 4, 0, 393251, 4, 0, 393252, 4, 0, 393253, 4, 0, 393254, 4, 0, 393255, 4, 0, 393256, 4, 0, 393257, 4, 0, 393258, 4, 0, 393259, 4, 0, 393260, 4, 0, 393261, 4, 0, 393262, 4, 0, 393263, 4, 0, 393264, 4, 0, 393265, 4, 0, 393266, 4, 0, 393267, 4, 0, 393268, 4, 0, 393269, 4, 0, 393270, 4, 0, 393271, 4, 0, 393272, 4, 0, 393273, 4, 0, 393274, 4, 0, 393275, 4, 0, 393276, 4, 0, 393277, 4, 0, 393278, 4, 0, 393279, 4, 0, 393280, 4, 0, 393281, 4, 0, 393282, 4, 0, 393283, 4, 0, 524284, 4, 0, 524285, 4, 0, 524286, 4, 0, 524287, 4, 0, 458752, 4, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 4, 0, 458761, 4, 0, 458762, 4, 0, 458763, 4, 0, 458764, 4, 0, 458765, 4, 0, 458766, 4, 0, 458767, 4, 0, 458768, 4, 0, 458769, 4, 0, 458770, 4, 0, 458771, 4, 0, 458784, 4, 0, 458785, 4, 0, 458786, 4, 0, 458787, 4, 0, 458788, 4, 0, 458789, 4, 0, 458790, 4, 0, 458791, 4, 0, 458792, 4, 0, 458793, 4, 0, 458794, 4, 0, 458795, 4, 0, 458796, 4, 0, 458797, 4, 0, 458798, 4, 0, 589820, 4, 0, 589821, 4, 0, 589822, 4, 0, 589823, 4, 0, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 4, 0, 524297, 4, 0, 524298, 4, 0, 524299, 4, 0, 524300, 4, 0, 524301, 4, 0, 524302, 4, 0, 524303, 4, 0, 524304, 4, 0, 524305, 4, 0, 524306, 4, 0, 524307, 4, 0, 524320, 4, 0, 524321, 4, 0, 524322, 4, 0, 524323, 4, 0, 524324, 4, 0, 524325, 4, 0, 524326, 4, 0, 524327, 4, 0, 524328, 4, 0, 524329, 4, 0, 524330, 4, 0, 524331, 4, 0, 524332, 4, 0, 524333, 4, 0, 524334, 4, 0 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( -219.061, -11.9055 )
[connection signal="body_entered" from="falllzone" to="player" method="_on_falllzone_body_entered"]
[connection signal="timeout" from="RichTextLabel2/Timer" to="RichTextLabel2" method="_on_Timer_timeout"]
[connection signal="timeout" from="jumptext/jumptextTimer" to="jumptext" method="_on_jumptextTimer_timeout"]
[connection signal="body_entered" from="jumptextarea" to="jumptext" method="_on_jumptextarea_body_entered"]
[connection signal="body_entered" from="nextlvl" to="player" method="_on_nextlvl_body_entered"]
